# simplex_method_gpu

./: .gitignore  Makefile  README.md  glpk_interface.cpp  matrix_types.hpp  sample_input.txt  simplex.cpp  solver.cu  solver_quadratic_basis.cu
archive/thesis/cpu/: liblp.c  lpsolver.c  matman.c
archive/thesis/gpu/: culiblp.cu  culpsolver.cpp  cumatman.cu
glop_baseline/: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  glop_solver.cpp  glop_solver.hpp  main.cpp  test_glop_solver.cpp
input/: adlittle.canonical  glpk_sample.txt  markshare_5_0.mps.txt  neos-849702.in  p2m2petc.in  sample.txt  sample2.canonical
scripts/: generate_groundtruth.bash  test_solver_correctness.bash
src/: solver.cu  v1_baseline.cu  v2_quadratic_B_inv.cu  v3_linear_y_and_x_b.cu  v4_cub_reduction.cu
src/cuda/: _v1_baseline.cu  _v3_linear_y_and_x_b.cu  _v4_cub_reduction.cu  v1_baseline.cu  v1_baseline_fix.cu  v2_quadratic_B_inv.cu  v3_linear_y_and_x_b.cu
src/glpk/: glpk_interface.cpp  glpk_solver.cpp
src/gurobi/: interface_gurobi.py  solver_gurobi.py
src/utils/: generate_random.py  mps_to_canonical.py
test/experiment/: adlittle.mps.txt  afiro.mps.txt  e226.mps.txt  sample.mps.txt  sample3.mps.txt
test/groundtruth/: a1c1s1.mps.txt  adlittle.mps.txt  afiro.mps.txt  beasleyC3.mps.txt  bienst2.mps.txt  binkar10_1.mps.txt  e226.mps.txt  eilB101.mps.txt  g200x740i.mps.txt  glass4.mps.txt  harp2.mps.txt  k16x240.mps.txt  mc11.mps.txt  mik-250-1-100-1.mps.txt  n4-3.mps.txt  neos-1112782.mps.txt  neos-1225589.mps.txt  neos-1396125.mps.txt  neos-555424.mps.txt  neos-686190.mps.txt  neos-826841.mps.txt  neos-847302.mps.txt  neos15.mps.txt  p100x588b.mps.txt  p80x400b.mps.txt  pg.mps.txt  pg5_34.mps.txt  qiu.mps.txt  r80x800.mps.txt  ran14x18-disj-8.mps.txt  ran14x18.mps.txt  ran16x16.mps.txt  sample3.mps.txt
test/input/: afiro.canonical  e226.canonical  sample3.canonical
